removing AS 422 support